--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ body{
     position: sticky;
     top: 0;
 }
-.ticket-color.pink{
+.ticket-color.lightpink{
     background-color: lightpink;
 }
 
